--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -2,19 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
    name: nginx
+   labels:
+     app:nginx
 spec:
     selector:
        matchLabels:
-         run: nginx
+         app: nginx
     strategy:
        type: RollingUpdate
        rollingUpdate:
-           maxUnavailable: 100%
-    replicas: 4
+           maxUnavailable: 75%
+    replicas: 3
     template:
       metadata:
         labels:
-          run: nginx
+          app: nginx
       spec:
           containers:
             - name: udacitycapstoneproject 
@@ -31,7 +33,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    run: nginx
+    app: nginx
   ports:
     - name: http
       protocol: TCP
