--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -1,38 +1,58 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-   name: nginx
+  name: ngnix-deployment
+  labels:
+    app: ngnix-deployment
 spec:
-    selector:
-       matchLabels:
-         app: nginx
-    strategy:
-       type: RollingUpdate
-       rollingUpdate:
-           maxUnavailable: 75%
-    replicas: 3
-    template:
-      metadata:
-        labels:
-          app: nginx
-      spec:
-          containers:
-            - name: udacitycapstoneproject 
-              imagePullPolicy: Always
-              image: mohmagdy1016/udacitycapstoneproject:latest
-              ports:
-              - containerPort: 80
-           
+  selector:
+    matchLabels:
+      app: ngnix-deployment
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  progressDeadlineSeconds: 1200
+  minReadySeconds: 60
+  template:
+    metadata:
+      labels:
+        app: ngnix-deployment
+    spec:
+      
+      containers:
+      - name: udacitycapstoneproject
+        image: mohmagdy1016/udacitycapstoneproject:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+       
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: ngnix-deployment
 spec:
   type: LoadBalancer
   selector:
-    app: nginx
+    app: ngnix-deployment
   ports:
     - name: http
       protocol: TCP
       port: 80
+      targetPort: 80
+    
+---
+kind: HorizontalPodAutoscaler
+apiVersion: autoscaling/v1
+metadata:
+  name: ngnix-deployment
+spec:
+  scaleTargetRef:
+    apiVersion: extensions/v1beta1
+    kind: Deployment
+    name: ngnix-deployment
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
