--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -23,7 +23,7 @@ spec:
       
       containers:
       - name: udacitycapstoneproject
-        image: mohmagdy1016/udacitycapstoneproject:latest
+        image: mohmagdy1016/udacitycapstoneproject
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -53,6 +53,6 @@ spec:
     apiVersion: extensions/v1beta1
     kind: Deployment
     name: ngnix-deployment
-  minReplicas: 2
+  minReplicas: 3
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
