--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -8,6 +8,7 @@ spec:
   selector:
     matchLabels:
       app: ngnix-deployment
+  replicas: 2
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -41,16 +42,3 @@ spec:
       port: 80
       targetPort: 80
     
----
-kind: HorizontalPodAutoscaler
-apiVersion: autoscaling/v1
-metadata:
-  name: ngnix-deployment
-spec:
-  scaleTargetRef:
-    apiVersion: extensions/v1beta1
-    kind: Deployment
-    name: ngnix-deployment
-  minReplicas: 2
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 80
