--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -9,6 +9,7 @@ spec:
     matchLabels:
       app: ngnix-deployment
   replicas: 2
+  revisionHistoryLimit: 10
   strategy:
     type: RollingUpdate
   template:
