--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -8,7 +8,6 @@ spec:
   selector:
     matchLabels:
       app: ngnix-deployment
-  replicas: 6
   revisionHistoryLimit: 10
   strategy:
     type: RollingUpdate
@@ -39,4 +38,18 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+
+---
+kind: HorizontalPodAutoscaler
+apiVersion: autoscaling/v1
+metadata:
+  name: ngnix-deployment
+spec:
+  scaleTargetRef:
+    apiVersion: extensions/v1beta1
+    kind: Deployment
+    name: ngnix-deployment
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
     
